force-app/main/default/objects/custom_create71__c/custom_create71__c.object-meta.xml
<CustomObject>
    <label>Custom created object71</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects71</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>