force-app/main/default/objects/custom_create71__c/fields/custom_create_71field566__c.field-meta.xml
<CustomField>
    <fullName>custom_create_71field566__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 71field566</label>
    <type>Checkbox</type>
</CustomField>